--- a/style.css
+++ b/style.css
@@ -12,7 +12,25 @@
 body{
     background:whitesmoke;
 }
+/* Dropdown Menu */
+.dropdown-menu {
+    background-color: #f78fb3 !important;
+    border: none;
+}
 
+.dropdown-item {
+    color: white !important;
+  
+    text-shadow: 1px 1px 1px black;
+    transition: 0.3s ease;
+    font-weight: 900 !important;
+}
+
+.dropdown-item:hover {
+    background-color: #17a2b8 !important;
+    color: white !important;
+    border-radius: 5px;
+}
 
 
 /* top cards */
@@ -236,13 +254,3 @@ body{
 html{
     scroll-behavior: smooth;
 }
-.arrow{
-    position: fixed;
-    background-color: #f78fb3;
-    border-radius: 50px;
-    height: 50px;
-    bottom: 40px;
-    right: 50px;
-    text-decoration: none;
-    text-align: center;
-    line-height: 50px;
