--- a/style/cake.css
+++ b/style/cake.css
@@ -6,16 +6,19 @@
     width: 100%; /* Ensures uniform width */
     min-height: 450px; /* Set a consistent height */
     padding: 10px;
-    background-color: #ffc0cb; /* Matching your pink theme */
+    background-color: #f78fb3; /* Matching your pink theme */
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
 }
 
+
 .card img {
     max-width: 100%;
     height: 150px; /* Ensures images are the same size */
     object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
 
 .card-body {
@@ -45,6 +48,9 @@
     font-size: 1.2em !important;
 }
 
-h6 {
-    margin-top: 10px;
+
+
+
+.row {
+    margin-top: 20px;
 }
