--- a/style/footer.css
+++ b/style/footer.css
@@ -1,5 +1,5 @@
 /* footer */
-#footer{
+/* #footer{
     width: 100%;    
     background-color: rgb(248, 165, 194);
     box-shadow: 0px 0px 5px black;
@@ -32,5 +32,107 @@
 }
 .credite{
     color: white;
-}
+} */
 /* footer */
+/* Footer */
+#footer {
+    width: 100%;
+    background-color: #f78fb3;
+    box-shadow: 0px 0px 5px black;
+    margin-top: 30px;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 1rem;
+    position: relative;
+}
+
+/* Social Media Icons */
+#footer .icons {
+    display: flex;
+    justify-content: center;
+    gap: 15px; /* Even spacing between icons */
+    margin-top: 10px;
+}
+
+.icons i {
+    background-color: white;
+    color: #f78fb3;
+    border-radius: 50%;
+    padding: 10px;
+    font-size: 25px;
+    transition: 0.3s ease-in-out;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 45px;
+}
+
+.icons i:hover {
+    background-color: #17a2b8;
+    color: white;
+}
+
+/* Copyright Text */
+.copyright {
+    color: white;
+    margin-top: 15px;
+    font-size: 0.9rem;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    #footer {
+        font-size: 0.9rem;
+        padding: 15px 0;
+    }
+
+    .icons i {
+        font-size: 20px;
+        width: 40px;
+        height: 40px;
+        padding: 8px;
+    }
+
+    .copyright {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 480px) {
+    #footer {
+        font-size: 0.8rem;
+        padding: 10px 0;
+    }
+
+    .icons i {
+        font-size: 18px;
+        width: 35px;
+        height: 35px;
+        padding: 6px;
+    }
+
+    .copyright {
+        font-size: 0.75rem;
+    }
+}
+@media (max-width: 992px) {
+    #footer {
+        font-size: 0.8rem;
+        margin-top: 20px;
+        padding: 10px;
+    }
+
+    .icons i {
+        font-size: 18px;
+        width: 35px;
+        height: 35px;
+        padding: 6px;
+    }
+
+    .copyright {
+        font-size: 0.75rem;
+    }
+
+    
+}
