--- a/style/footer.css
+++ b/style/footer.css
@@ -50,7 +50,8 @@
 #footer .icons {
     display: flex;
     justify-content: center;
-    gap: 15px; /* Even spacing between icons */
+    gap: 15px;
+    /* Even spacing between icons */
     margin-top: 10px;
 }
 
@@ -116,6 +117,7 @@
         font-size: 0.75rem;
     }
 }
+
 @media (max-width: 992px) {
     #footer {
         font-size: 0.8rem;
@@ -134,5 +136,5 @@
         font-size: 0.75rem;
     }
 
-    
+
 }
