--- a/style/home.css
+++ b/style/home.css
@@ -1,9 +1,9 @@
 /* home section */
-.home{
+.home {
     width: 100%;
     height: 88.5vh;
     display: flex;
-    background-image: linear-gradient(#17a2b8,rgba(0,0,0,0.5)), url(./image/background2.png);
+    background-image: linear-gradient(#17a2b8, rgba(0, 0, 0, 0.5)), url(./image/background2.png);
     background-size: cover;
     align-items: center;
     justify-content: center;
@@ -11,77 +11,107 @@
     position: relative;
     z-index: 0;
 }
-.home .img{
+
+.home .img {
     flex: 1 1 400px;
 }
-.home .img img{
+
+.home .img img {
     width: 100%;
 }
-.home .content{
+
+.home .content {
     flex: 1 1 400px;
     margin-left: 60px;
 }
-.home p{
+
+.home p {
     font-size: 1.2em !important;
     margin-top: 10px;
 }
-.content h3{
+
+.content h3 {
     color: white;
     font-size: 60px;
     font-weight: bold;
     text-shadow: 1px 1px 1px black;
 }
-.content h2{
+
+.content h2 {
     font-size: 60px;
     color: white;
     text-shadow: 1px 1px 1px black;
     font-weight: bold;
 }
-.changecontent::after{
+
+.changecontent::after {
     content: ' ';
-    color:  #f78fb3;
+    color: #f78fb3;
     animation: changetext 10s infinite linear;
     font-weight: bold;
 }
-@keyframes changetext{
-    0%{content: "Birthday cake";}
-    20%{content: "Chocolate cake";}
-    50%{content: "Brownie cake";}
-    60%{content: "Cheese cake";}
-    100%{content: "Cup cake";}
+
+@keyframes changetext {
+    0% {
+        content: "Birthday cake";
+    }
+
+    20% {
+        content: "Chocolate cake";
+    }
+
+    50% {
+        content: "Brownie cake";
+    }
+
+    60% {
+        content: "Cheese cake";
+    }
+
+    100% {
+        content: "Cup cake";
+    }
 }
-.content p{
+
+.content p {
     color: white;
     font-weight: bold;
     text-shadow: 1px 1px 1px black;
 }
-.content .btn{
+
+.content .btn {
     width: 110px;
     height: 38px;
     background-color: #573818;
     color: white;
 }
-@media screen and (max-width:800px){
-    .content h3{
+
+@media screen and (max-width:800px) {
+    .content h3 {
         font-size: 50px;
     }
 }
-@media screen and (max-width:860px){
-    .home{
+
+@media screen and (max-width:860px) {
+    .home {
         height: 120vh;
     }
 }
-@media screen and (max-width:560px){
-    .home{
+
+@media screen and (max-width:560px) {
+    .home {
         height: 100vh;
     }
 }
-@media screen and (max-width:330px){
-    .content h2{
+
+@media screen and (max-width:330px) {
+    .content h2 {
         font-size: 30px;
     }
-    .content h3{
+
+    .content h3 {
         font-size: 30px;
     }
 }
+
 /* home section end */
