--- a/style/index.css
+++ b/style/index.css
@@ -30,9 +30,9 @@ body {
 }
 
 .dropdown-item:hover {
-    background-color: #17a2b8 !important;
-    color: white !important;
-    border-radius: 5px;
+  
+    color: #9e004d !important;
+   
 }
 
 
