--- a/style/about.css
+++ b/style/about.css
@@ -1,6 +1,6 @@
 /* about */
 #about {
-    margin-top: 50px;
+    margin-top: 9%;
 }
 
 #about h1 {
@@ -14,6 +14,7 @@
 
 .container {
     text-align: center;
+   
 }
 
 .row {
@@ -60,9 +61,9 @@ button:hover {
 
 #about p {
     color: #f78fb3;
-    text-shadow: 1px 1px 1px black;
+    /* text-shadow: 1px 1px 1px black; */
     font-weight: bold;
-    font-size: 1.2em !important;
+    font-size: 1.5em !important;
 }
 
 #bt button {
@@ -76,12 +77,27 @@ button:hover {
 }
 
 @media screen and (max-width:1000px) {
+  
+    #about {
+        margin-top: 9%;
+    }
+    
     #about p {
         font-size: 10px;
+    }
+    #about h1{
+        margin-top: 15% !important;
     }
 }
 
 @media screen and (max-width:760px) {
+    
+   
+
+    #about {
+        margin-top: 9%;
+    }
+    
     #about p {
         font-size: 20px;
     }
@@ -93,6 +109,9 @@ button:hover {
 }
 
 @media screen and (max-width:500px) {
+    #about h1{
+        margin-top: 40% !important;
+    }
     #about p {
         font-size: 15px;
     }
@@ -103,5 +122,6 @@ button:hover {
     }
 
 }
+
 
 /* about */
