--- a/style/cake.css
+++ b/style/cake.css
@@ -1,4 +1,11 @@
+
+#product-cards
+{
+   margin-top: 9%;
+}
+
 .card {
+   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +20,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
+    font-weight:900;
 }
 
 
@@ -33,6 +41,7 @@
     align-items: center;
     width: 100%;
     min-height: 200px;
+    font-weight:900;
     /* Ensures all card bodies are the same size */
 }
 
@@ -52,6 +61,7 @@
     text-align: center;
     padding: 0 10px;
     font-size: 1.2em !important;
+
 }
 
 
@@ -59,4 +69,35 @@
 
 .row {
     margin-top: 20px;
+}
+
+
+@media screen and (max-width: 500px) {
+    #product-cards h1 {
+        font-size: 1.5em; /* Slightly smaller */
+        margin-top: 30vh !important; /* Adjust based on screen height */
+    }
+}
+
+/* For larger mobile devices and small tablets */
+@media screen and (max-width: 768px) {
+    #product-cards h1 {
+        font-size: 1.8em;
+        margin-top: 20vh !important;
+    }
+}
+
+/* For tablets */
+@media screen and (max-width: 1024px) {
+    #product-cards h1 {
+        font-size: 2em;
+        margin-top: 12vh;
+    }
+}
+
+/* For small laptops */
+@media screen and (max-width: 1366px) {
+    #product-cards h1 {
+        margin-top: 8vh;
+    }
 }
