--- a/style/nav.css
+++ b/style/nav.css
@@ -71,6 +71,11 @@ nav li a{
     font-family: 'Dancing Script', cursive;
     font-weight: bold;
     font-size: 1.2em !important;
+    position: fixed;  /* Fixes the navbar at the top */
+    top: 0;           /* Aligns it to the top */
+    left: 0;
+    width: 100%;      /* Ensures it spans the full width */
+    z-index: 1000;    /* Keeps it above other elements */
 }
 
 /* Logo */
@@ -90,9 +95,9 @@ nav li a{
 }
 
 .nav-link:hover {
-    background-color: #17a2b8;
-    color: white !important;
-    border-radius: 5px;
+   
+    color: #9e004d !important;
+  
 }
 
 /* Dropdown Menu */
@@ -116,9 +121,9 @@ nav li a{
 }
 
 .dropdown-item:hover {
-    background-color: #17a2b8;
-    color: white;
-    border-radius: 5px;
+ 
+    color: #9e004d;
+   
 }
 
 /* Mobile Navbar */
