--- a/style/home.css
+++ b/style/home.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 88.5vh;
     display: flex;
-    background-image: linear-gradient(#17a2b8, rgba(0, 0, 0, 0.5)), url(./image/background2.png);
+    background-image: linear-gradient(#f78fb3, rgba(238, 205, 205, 0.5));
     background-size: cover;
     align-items: center;
     justify-content: center;
@@ -17,7 +17,8 @@
 }
 
 .home .img img {
-    width: 100%;
+    width: 70%;
+    margin-left: 15% !important;
 }
 
 .home .content {
